# whip

./: .env.example  .gitignore  README.md  pyproject.toml
whip/: __init__.py  claude_desktop.py  cli.py  config.py  daemon.py  tg.py
whip/hooks/: pre_tool.py  stop.py
